[package]
name = "krafix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
vulkano = "0.29.0"
winit = "0.26.0"
vulkano-win = "0.29.0"
vulkano-shaders = "0.29.0"
bytemuck = "1.12.1"
nalgebra-glm = "0.16.0"
