[package]
name = "krafix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
vulkano = "0.31.1"
winit = "0.27.4"
vulkano-win = "0.31.0"
vulkano-shaders = "0.31.1"
bytemuck = "1.12.1"
nalgebra-glm = "0.17.0"
