[package]
name = "rufix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
vulkano = "0.32.3"
vulkano-win = "0.32.0"
vulkano-shaders = "0.32.0"
winit = "0.27.5"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
nalgebra-glm = "0.17.0"
